<resources>
    <string name="app_name">RestaurantApp</string>
    <string name="request_email">Ingresar correo</string>
    <string name="request_password">Ingresar contraseña</string>
    <string name="login">Ingresar</string>
    <string name="check_in">Registrar</string>
    <string name="sale">Pagar</string>
    <string name="add">Añadir</string>
    <string name="order">Perdir</string>
    <string name="request_phone_number">Ingresa un numero de celular</string>
    <string name="request_full_name">Ingresa tu nombre completo</string>


    <string name="request_item">Ordenes</string>
    <string name="reports_item">Reportes</string>
    <string name="sales_item">Facturas</string>
    <string name="log_out_item">Cerrar Sesión</string>

    <string name="configuracion_item">Configuración</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>