<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_request"
            android:checked="true"
            android:icon="@drawable/ic_receipt"
            android:title="@string/request_item"
            app:iconTint="@color/secondary" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_assessment"
            android:title="@string/reports_item"
            app:iconTint="@color/secondary" />
        <item
            android:id="@+id/nav_sales"
            android:icon="@drawable/ic_sale"
            android:title="@string/sales_item"
            app:iconTint="@color/secondary" />
        <!-- Sección de configuración -->
        <item
            android:id="@+id/configuration_section"
            android:title="@string/configuracion_item">
            <menu>
                <item
                    android:id="@+id/nav_log_out"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/log_out_item" />
            </menu>
        </item>
    </group>

</menu>